--- a/2020-01-01.md
+++ b/2020-01-01.md
@@ -1,15 +1,14 @@
-# ocrid
+# orcid
 深夜五点（凌晨）吐槽：
 ## 问题
-1. 作者，不要想不起来原来的id就再次申请一个，请找回。
-2. 编辑，校验一下作者提交的ocrid合不合法，它是有校验码的。（我怀疑有的编辑不知道具体ocrid是什么）
-3. 作者，提交ocrid之前先查一下，别错了。有的人发了4篇一直在用错，请访问一下自己的ocrid网站。韩sx、毕cw...
-4. 作者，不要两个人提交同一个ocrid。
-
+1. 作者，持续使用一个orcid，想不起来了可以找到申请邮箱并请求找回。
+2. 编辑，校验一下作者提交的ocrid合不合法，它是有校验码的。理论上来说，编辑应该通过orcid的系统关联相关记录。（我怀疑有的编辑根本不知道orcid是什么）
+3. 作者，提交ocrid之前请检查提交的id是否为本人所有，且没有错误。有的人发了4篇一直在用错，请访问一下自己的ocrid网站。韩sx、毕cw...
+4. 作者，同一篇文章的两位作者不要提交同样的orcid，orcid的目的在于区分作者。
 [1]基于Kano模型的高校图书馆微信公众号服务内容分类和供给优先序研究
-[2]中文学术期刊论文的引文模式研究——以2006-2008年图书情报领域期刊论文为例 2019 图书情报工作的编辑请走心
+[2]中文学术期刊论文的引文模式研究——以2006-2008年图书情报领域期刊论文为例
 [3]科学知识图谱绘制工具CiteSpace的学科领域扩散特征研究  
-[4]S-O-R分析框架下的强关系社交媒体用户中辍行为的形成机理--一项基于扎根理论的探索性研究 （名字这么像就不要用一样的）
+[4]S-O-R分析框架下的强关系社交媒体用户中辍行为的形成机理--一项基于扎根理论的探索性研究 （名字这么像就不要用一样的嘛）
 [5]一种面向主题覆盖度与权威度的评审专家推荐模型研究 
 [6]试析中外信息安全保障体系的演进路径 
 [7]0000000271727333
@@ -19,17 +18,17 @@
 [11]000000026945003X
 
 5. 用错成非本篇作者的ocrid
-[1]一个用于识别睡美人文献的新的无参数指标——基于“Science”和“Nature”上睡美人文献的验证
-[2]睡美人与王子文献的识别方法研究（我的妈呀，武夷山这种大佬都会用错= =，还两次）
-[3]专利创新生态系统的生态学属性、测量及其政策启示 （lf，就算ml是您的导师，也不要用错成她的ocrid好吗）
-[4]0000-0002-3315-4191 pb不要用lsd的
-[5]0000-0001-8401-2436 dy别用馆长wy的
+[1]一个用于识别睡美人文献的新的无参数指标——基于“Science”和“Nature”上睡美人文献的验证 wys
+[2]睡美人与王子文献的识别方法研究（wdmy，武夷山这种大佬都会提交错误，还是两次）
+[3]专利创新生态系统的生态学属性、测量及其政策启示 （lf，ml）
+[4]0000-0002-3315-4191 pb，lsd
+[5]0000-0001-8401-2436 dy，馆长wy
 [6]0000000257146380
 [7]0000000339457174
 
-6. 只提交一人的ocrid并错配
-[1]面向中文图书评论的情感词典构建方法研究（请提交所有作者的ocrid，并同姓名正确匹配）
-[2]主流Meta分析软件功能及其在领域知识发现的拓展应用研究（同4）中科院文献情报中心
+6. 只提交一人的orcid并错配
+[1]面向中文图书评论的情感词典构建方法研究
+[2]主流Meta分析软件功能及其在领域知识发现的拓展应用研究 中科院文献情报中心
 
 
 
@@ -41,4 +40,4 @@
 
 
 
-都是搞图情的，能不能专业一点啊）））尤其是搞计量的。今天瞎搞就是明天流的泪啊
+都是搞图情的，能不能专业一点啊。尤其是做计量的。今天瞎搞就是明天消歧流的泪啊
